salsa-2022-tests/tests/compile-fail/tracked_method_incompatibles.stderr
error: tracked functions must have at least a database and salsa struct argument
  --> tests/compile-fail/tracked_method_incompatibles.rs:13:8
   |
13 |     fn use_tracked(&self) {
   |        ^^^^^^^^^^^
